corrected z-index for header and .container

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -16,7 +16,7 @@
   padding-top: 65px;
   margin-top: -65px;
   background-color: #333;
-  z-index: -1;
+  /* z-index: -1; */
 }
 
 /* --------------------------------NEW-NAVBAR------------------------- */
@@ -38,13 +38,15 @@
 }
 
 header {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	height: 65px;
-	padding: 0 2rem;
-	background-color: #11101b;
-	color: #fefefe;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 65px;
+  padding: 0 2rem;
+  background-color: #11101b;
+  color: #fefefe;
+  z-index: 10000;
+  position: relative;
 }
 
 nav a {
